--- a/projectmanager/templates/projectmanager/includes/tickets-app/template.html
+++ b/projectmanager/templates/projectmanager/includes/tickets-app/template.html
@@ -2,8 +2,13 @@
   <div class="card" id="tickets-app">
     <div class="card-header">
       <h5 class="text-center">
-        <button class="btn btn-link" data-toggle="collapse" data-target="#collapse-tickets" aria-expanded="true"
-          aria-controls="collapse-tickets">
+        <button
+          class="btn btn-link"
+          data-toggle="collapse"
+          data-target="#collapse-tickets"
+          aria-expanded="true"
+          aria-controls="collapse-tickets"
+        >
           تیکت ها
           <span v-if="tickets.length>0">
             <small class="text-danger mx-2">
@@ -14,71 +19,95 @@
       </h5>
     </div>
 
-    <div id="collapse-tickets" class="collapse {% if expand_tickets %} show {% endif %}"
-      aria-labelledby="heading-tickets" data-parent="#accordion-tickets">
+    <div
+      id="collapse-tickets"
+      class="collapse {% if expand_tickets %} show {% endif %}"
+      aria-labelledby="heading-tickets"
+      data-parent="#accordion-tickets"
+    >
       <div class="card-body">
         <div class="table-responsive">
           <table class="table table-striped">
             <thead>
               <th>عنوان تیکت</th>
+              {% if not projetct %}
 
-              <th>پروژه</th> 
-              <th>شخص</th>  
-              <th>تاریخ</th>  
+              <th>پروژه</th>
+              {% endif %}
+              <th>شخص</th>
+              <th>تاریخ</th>
               <th></th>
             </thead>
             <tbody>
               <tr v-for="ticket in tickets">
-
-
                 <td>
                   <div class="media">
                     <a :href="ticket.get_absolute_url">
-                      <img :src="ticket.thumbnail" width="32" class="rounded" alt="">
+                      <img
+                        :src="ticket.thumbnail"
+                        width="32"
+                        class="rounded"
+                        alt=""
+                      />
                     </a>
                     <div class="media-body mr-2">
                       <div>
                         <a :href="ticket.get_absolute_url">
-                          <span :class="'text-'+ticket.get_status_color" v-text="ticket.title"></span>
+                          <span
+                            :class="'text-'+ticket.get_status_color"
+                            v-text="ticket.title"
+                          ></span>
                         </a>
                         <div>
-
-                          <span :class="'badge badge-'+ticket.get_status_color" v-text="ticket.status"></span>
+                          <span
+                            :class="'badge badge-'+ticket.get_status_color"
+                            v-text="ticket.status"
+                          ></span>
                         </div>
-
                       </div>
                     </div>
                   </div>
-
                 </td>
 
                 <td>
-                  <div>
-                    <a :href="ticket.project.get_absolute_url">
-                      <span v-text="ticket.project.title"></span>
-                    </a>
+                  {% if not projetct %}
+                  <div v-for="project in [ticket.project]">
+                    <div v-if="project">
+                      {% include "projectmanager/includes/project-app/media.html" %}
+                    </div>
                   </div>
+
+                  {% endif %}
                 </td>
 
-                 <td>
+                <td>
                   <div v-for="person in [ticket.person]">
-                     {% include "authentication/includes/person-app/media.html" %}
+                    <div v-if="person">
+                      {% include "authentication/includes/person-app/media.html" %}
+                    </div>
                   </div>
                 </td>
 
-                  <td>
-                   <span v-text="ticket.persian_datetime_added"></span>
+                <td>
+                  <span v-text="ticket.persian_datetime_added"></span>
                 </td>
 
-               
-              
-
                 <td>
-                  <a target="_blank" :href="ticket.get_edit_url" title="ویرایش" class="text-warning mx-2">
+                  <a
+                    target="_blank"
+                    :href="ticket.get_edit_url"
+                    title="ویرایش"
+                    class="text-warning mx-2"
+                  >
                     <i class="fa fa-edit text-warning"> </i>
                     ویرایش
                   </a>
-                  <a target="_blank" :href="ticket.get_delete_url" title="حذف" class="text-danger mx-2">
+                  <a
+                    target="_blank"
+                    :href="ticket.get_delete_url"
+                    title="حذف"
+                    class="text-danger mx-2"
+                  >
                     <i class="fa fa-trash text-danger"> </i>
                     حذف
                   </a>
