--- a/organization/templates/organization/includes/add-organization-unit-app/template.html
+++ b/organization/templates/organization/includes/add-organization-unit-app/template.html
@@ -85,6 +85,7 @@
                   </a>
                   <div v-if="!person_account.id">
                     <h5 class="text-danger">حساب انتخاب نشده است.</h5>
+                    <a target="_blank" href="{% url 'accounting:person_accounts' %}">همه حساب های اشخاص</a>
                   </div>
                 </div>
               </div>
