--- a/accounting/templates/accounting/index.html
+++ b/accounting/templates/accounting/index.html
@@ -178,6 +178,20 @@
     </a>
   </div>
 
+
+  
+  <div class="col-6 col-md-3 col-lg-2 text-center my-3">
+    <a href="{% url 'accounting:cheques'  %}">
+      <img
+        src="{% static 'accounting/img/financialevent.png' %}"
+        width="64em"
+        class="mb-2"
+        alt=""
+      />
+      <h6 class="text-center">چک ها</h6>
+    </a>
+  </div>
+
   <!-- <div class="col-6 col-md-3 col-lg-2 text-center my-3">
         <a href="{% url 'accounting:add_financial_event'  %}">
             <img src="{% static 'accounting/img/addfinancialevent.png' %}" width="64em" class="mb-2" alt="">
