--- a/accounting/templates/accounting/includes/add-cheque-app/template.html
+++ b/accounting/templates/accounting/includes/add-cheque-app/template.html
@@ -6,7 +6,7 @@
             <h5 class="text-center">
                 <button class="btn btn-link" data-toggle="collapse" data-target="#collapse-add-cheque"
                     aria-expanded="true" aria-controls="collapse-add-cheque">
-                    افزودن رویداد مالی
+                    افزودن چک
 
                 </button>
             </h5>
@@ -198,7 +198,7 @@
                            
                             <button class="btn btn-success" type="submit">
                                 <i class="fa fa-plus"></i>
-                                افزودن رویداد مالی
+                                افزودن چک
                             </button>
                             <div v-if="waiting">
                                 <img src="{% static 'leo/img/loading.gif' %}" width="48" alt="">
