some fields for authentication person model

--- a/authentication/templates/authentication/includes/add-person-app/script.html
+++ b/authentication/templates/authentication/includes/add-person-app/script.html
@@ -12,6 +12,8 @@
     last_name:'',
     mobile:'',
     address:'',
+    birth_location:'',
+    birth_date:'',
     bio:'',
     melli_code:'',
     type:'حقیقی',
@@ -72,6 +74,8 @@
           email: this.email,
           melli_code: this.melli_code,
           bio: this.bio,
+          birth_date: this.birth_date,
+          birth_location: this.birth_location,
           profile_id: this.profile_id,
         };
 
