--- a/authentication/templates/authentication/includes/add-person-app/template.html
+++ b/authentication/templates/authentication/includes/add-person-app/template.html
@@ -137,6 +137,24 @@
               </div>
             </div>
 
+
+            <div class="col-md-4">
+              <div class="form-group">
+                <label for="">محل تولد</label>
+                <input v-model="birth_location" type="text" class="form-control" />
+              </div>
+            </div>
+
+
+            
+            <div class="col-md-4">
+              <div class="form-group">
+                <label for="">تاریخ تولد</label>
+                <input v-model="birth_date" type="text" class="form-control" />
+              </div>
+            </div>
+
+
             <div class="col-md-4">
               <div class="form-group">
                 <label for="">ایمیل</label>
