icon for cheque

--- a/accounting/templates/accounting/index.html
+++ b/accounting/templates/accounting/index.html
@@ -183,7 +183,7 @@
   <div class="col-6 col-md-3 col-lg-2 text-center my-3">
     <a href="{% url 'accounting:cheques'  %}">
       <img
-        src="{% static 'accounting/img/financialevent.png' %}"
+        src="{% static 'accounting/img/cheques.png' %}"
         width="64em"
         class="mb-2"
         alt=""
