--- a/accounting/templates/accounting/includes/financial-events-app/template.html
+++ b/accounting/templates/accounting/includes/financial-events-app/template.html
@@ -67,9 +67,17 @@
             <tbody>
               <tr v-for="financial_event in financial_events">
                 <td>
-                  <a :href="financial_event.get_absolute_url">
-                    <span v-text="financial_event.title"> </span>
+                  <div class="media">
+                     <a :href="financial_event.get_absolute_url">
+                    <img :src="financial_event.thumbnail" width="48" class="rounded">
                   </a>
+                    <div class="media-body mr-2">
+                    <a :href="financial_event.get_absolute_url">
+                        <span v-text="financial_event.title"> </span>
+                      </a>
+                    </div>
+                  </div>
+                  
                 </td>
 
                 <td>
