make financial_event draft

--- a/accounting/templates/accounting/includes/edit-invoice-app/template.html
+++ b/accounting/templates/accounting/includes/edit-invoice-app/template.html
@@ -32,6 +32,8 @@
           <div class="col-md-4">
             <div class="form-group">
               <label for=""> تخفیف</label>
+              
+                <span v-text="to_price(discount)"></span> {{CURRENCY}}
               <input
                 type="number"
                 class="form-control"
