--- a/accounting/templates/accounting/includes/financial-event-app/card.html
+++ b/accounting/templates/accounting/includes/financial-event-app/card.html
@@ -3,9 +3,12 @@
   <div class="card-header">
     <h5>
       {{financial_event.title}}
+       <span class="badge badge-{{financial_event.status_color}}">
+        {{financial_event.status}}
+      </span>
     </h5>
 
-  </div>
+  </div>  
   <div class="card-body">
 
     {% include 'accounting/includes/financial-event-app/card-contents.html' %}
