--- a/accounting/templates/accounting/includes/invoice-app/card.html
+++ b/accounting/templates/accounting/includes/invoice-app/card.html
@@ -16,6 +16,7 @@
     {% endfor %}
     <a class="text-info mx-2" href="{% url 'accounting:invoice_edit' pk=invoice.id%}"> تغییر </a>
 
+    <a class="text-info mx-2" href="{% url 'accounting:invoice_estelam' pk=invoice.id%}"> استعلام </a>
     <a class="text-info mx-2" href="{% url 'accounting:invoice_print' pk=invoice.id%}"> چاپ </a>
     <a class="text-info mx-2" href="{% url 'accounting:invoice_official_print' pk=invoice.id%}"> چاپ رسمی </a>
 
