--- a/accounting/templates/accounting/includes/invoice-lines-app/print-template.html
+++ b/accounting/templates/accounting/includes/invoice-lines-app/print-template.html
@@ -2,22 +2,18 @@
   {% load to_price %}
 
   <div class="card-body">
+        <h5 v-show="invoice_lines.length==0" class="text-center">سطری برای این فاکتور وجود ندارد.</h5>
+      
     <div class="table-responsive rtl">
        
-        <h5 v-show="invoice_lines.length==0" class="text-canter">سطری وجود ندارد.</h5>
-      
       <div v-show="invoice_lines.length>0">
         <table class="table table-striped farsi rtl">
           <thead>
             <th class="bordered farsi text-right">ردیف</th>
-            {% if not invoice_line_item %}
+            
 
             <th class="bordered farsi text-right">شرح</th>
-            {% endif %} {% if not invoice %}
-
-            <th class="bordered farsi text-right">فاکتور</th>
-
-            {% endif %}
+          
 
             <th class="bordered farsi text-right">تعداد</th>
 
@@ -36,36 +32,12 @@
                 <span v-text="index + 1"></span>
               </td>
 
-              {% if not invoice_line_item %}
+            
 
               <td class="bordered farsi text-right">
                 <span v-text="invoice_line.invoice_line_item.title"></span>
               </td>
-              {% endif %} {% if not invoice %}
-              <td class="bordered farsi text-right">
-                <span v-text="invoice_line.invoice.title"></span>
-                <div>
-                  <span
-                    v-text="invoice_line.invoice.persian_invoice_datetime"
-                  ></span>
-                </div>
-                <div class="row rtl">
-                  <div class="col-6">
-                    <small>
-                      <span
-                        v-text="invoice_line.invoice.bestankar.title"
-                      ></span>
-                    </small>
-                  </div>
-                  <div class="col-6">
-                    <small>
-                      <span v-text="invoice_line.invoice.bedehkar.title"></span>
-                    </small>
-                  </div>
-                </div>
-              </td>
-
-              {% endif %}
+               
               <td class="bordered farsi text-right">
                 <span v-text="invoice_line.quantity"></span>
                 <span v-text="invoice_line.unit_name"></span>
@@ -104,16 +76,7 @@
                 </div>
                 <div v-if="invoice_line.discount_percentage==0"></div>
               </td>
-
-              <!-- <td class="bordered farsi text-right">
-                                        <div>
-                                            <span
-                                                v-text="to_price(invoice_line.unit_price*invoice_line.quantity)"></span>
-                                        </div>
-                                        <div class="text-danger">
-                                            <span v-text="to_price(invoice_line.discount)"></span>
-                                        </div>
-                                    </td> -->
+ 
 
               <td class="bordered farsi text-right">
                 <div v-if="invoice_line.discount_percentage>0">
@@ -157,7 +120,8 @@
            
  
             {% endif %}
-            {% if invoice %} {% if invoice.shipping_fee > 0 %}
+            {% if invoice %} 
+            {% if invoice.shipping_fee > 0 %}
 
             <tr>
               <td colspan="5">
@@ -167,7 +131,7 @@
               <td class="bordered farsi text-right">
                 <span> {{invoice.shipping_fee|to_price}} </span>
               </td>
-              <td></td>
+           
             </tr>
             {% endif %} {% if invoice.tax_percent > 0 %}
 
