edit invoice app ok

--- a/accounting/templates/accounting/includes/edit-invoice-app/template.html
+++ b/accounting/templates/accounting/includes/edit-invoice-app/template.html
@@ -105,10 +105,135 @@
             </div>
           </div>
 
+          
           <div class="col-md-12">
-            <button class="btn btn-success" @click="edit_invoice()">
-              تایید
+            <div class="row">
+              <div class="col-6">
+                <div class="form-group">
+                  <label for="bedehkar_code">بدهکار</label>
+                  <button class="btn btn-info btn-sm" @click="paste_bedehkar()">
+                    <i class="fa fa-paste"></i>
+                  </button>
+
+                  <input type="text" placeholder="" class="form-control" id="bedehkar_code" @input="select_bedehkar()"
+                    v-model="bedehkar_code" />
+                </div>
+              </div>
+
+              <div class="col-6 mt-3">
+                <hr />
+                <a :href="bedehkar.get_absolute_url" v-if="bedehkar">
+                  <div class="media">
+                    <img :src="bedehkar.thumbnail" width="64" alt="" />
+                    <div class="mr-2 media-body">
+                      <h5 class="my-2">
+                        <span :class="'text-'+bedehkar.color" v-text="bedehkar.name"></span>
+                      </h5>
+                      <h6>
+                        <span :class="'text-'+bedehkar.color" v-text="bedehkar.code"></span>
+                      </h6>
+
+                      <h6>
+                        <span v-html="to_price_colored(bedehkar.balance)"></span>
+                      </h6>
+
+                      <h6>
+                        <small :class="'text-'+bedehkar.color" v-text="bedehkar.full_name"></small>
+                      </h6>
+                    </div>
+                  </div>
+                </a>
+                <div v-if="!bedehkar">
+                  <h5 class="text-danger">بدهکار انتخاب نشده است.</h5>
+                  <a target="_blank" href="{% url 'accounting:accounts' %}">همه حسابها</a>
+
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-12">
+            <button class="my-2 btn btn-info" title="جابجا کردن بدهکار و بستانکار" @click="swap()">
+              {% load static %}
+              <img width="32" src="{% static 'img/icons/exchange3.png' %}" alt="">
             </button>
+          </div>
+          <div class="col-md-12">
+            <div class="row">
+              <div class="col-6">
+                <div class="form-group">
+                  <label for="bestankar_code">بستانکار</label>
+                  <button class="btn btn-info btn-sm" @click="paste_bestankar()">
+                    <i class="fa fa-paste"></i>
+                    
+                  </button>
+                  <input type="text" placeholder="" class="form-control" id="bestankar_code" @input="select_bestankar()"
+                    v-model="bestankar_code" />
+                </div>
+              </div>
+              <div class="col-6 mt-3">
+                <hr />
+                <a :href="bestankar.get_absolute_url" v-if="bestankar">
+                  <div class="media">
+                    <img :src="bestankar.thumbnail" width="64" alt="" />
+                    <div class="mr-2 media-body">
+                      <h5 class="my-2">
+                        <span :class="'text-'+bestankar.color" v-text="bestankar.name"></span>
+                      </h5>
+                      <h6>
+                        <span :class="'text-'+bestankar.color" v-text="bestankar.code"></span>
+                      </h6>
+                      <h6>
+                        <span v-html="to_price_colored(bestankar.balance)"></span>
+                      </h6>
+
+                      <h6>
+                        <small :class="'text-'+bestankar.color" v-text="bestankar.full_name"></small>
+                      </h6>
+                    </div>
+                  </div>
+                </a>
+                <div v-if="!bestankar">
+                  <h5 class="text-danger">بستانکار انتخاب نشده است.</h5>
+                  <a target="_blank" href="{% url 'accounting:accounts' %}">همه حسابها</a>
+                </div>
+              </div>
+            </div>
+          </div>
+    <div class="col-md-4">
+            <div class="form-group">
+              <label for="exampleInputDate">تاریخ</label>
+              <date-picker v-model="event_date"></date-picker>
+
+              <input type="text" required class="form-control" v-model="event_date" />
+            </div>
+          </div>
+
+
+          <div class="col-md-4">
+            <div class="form-group">
+              <label for="exampleInputDate">زمان</label>
+
+              <input type="text" required class="form-control" v-model="event_time" />
+            </div>
+          </div>
+
+          <div class="col-md-12">
+            <button v-if="!show_confirm" class="btn btn-success" @click="show_confirm=true">
+              ذخیره
+            </button>
+
+            <div v-if="show_confirm">
+              <h6 class="my-3">
+                تغییرات ذخیره شود؟
+              </h6>
+              <button @click="show_confirm=false" class="btn btn-link">
+                خیر
+              </button>
+               <button class="btn btn-success" @click="edit_invoice()">
+              بله ، ذخیره کن
+            </button>
+
+            </div>
           </div>
           <div class="col-md-12">
             <img
